@@ -1,3 +1,8 @@
+2006-12-26  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/print/print-settings.c (check_version): check keyfile
+	before accessing it. Minor code cleanup.
+
 2006-12-25  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/print/print-draw-page.c
